Fix to wrapping issues within service table at small sizes

--- a/_sections.sass
+++ b/_sections.sass
@@ -37,6 +37,10 @@
 				width: 80%
 				margin: 0 10%
 				margin-bottom: 2rem
+			@media screen and (max-width: $break-medium)
+				width: 100%
+				margin: 1rem 0
+				float: none
 	#about
 		clear: both
 		background: $dark-grey
