--- a/styles.css
+++ b/styles.css
@@ -497,6 +497,11 @@ nav#main-nav {
         width: 80%;
         margin: 0 10%;
         margin-bottom: 2rem; } }
+    @media screen and (max-width: 700px) {
+      #main-content #services .service-table {
+        width: 100%;
+        margin: 1rem 0;
+        float: none; } }
 
 #main-content #about {
   clear: both;
